Design Book Create Template

--- a/templates/books/books.html
+++ b/templates/books/books.html
@@ -18,7 +18,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Books List</h5>
-                <a href="{% url 'create_category'%}" class="btn btn-primary">
+                <a href="{% url 'create_books' %}" class="btn btn-primary">
                     <i class="fa fa-plus-square"></i> Add Book
                 </a>
               <table class="table table-hover table-bordered  table-responsive mt-2">
@@ -26,7 +26,7 @@
                       <th>#</th>
                       <th>Title</th>
                       <th>Author</th>
-                      <th>Resealed</th>
+                      <th>Released</th>
                       <th>Category</th>
                       <th>User</th>
                       <th>Date</th>
