--- a/templates/categories/categories.html
+++ b/templates/categories/categories.html
@@ -37,7 +37,7 @@
                       <td>
                         
                         
-                        <a href="{% url 'update_category' category.id %}" onclick="this.parentNode.submit()" class="text-info">
+                        <a href="{% url 'update_category' category.id %}" class="text-info">
                           <i class="fa fa-pen-to-square"></i>
                         </a>
                         <form method="post" action="{% url 'remove_category' category.id %}" class="d-inline-flex">
