--- a/templates/books/books.html
+++ b/templates/books/books.html
@@ -61,4 +61,7 @@
         </div>
     </div>
 </main>
+<script>
+  document.getElementById('tab-books').classList.add('active')
+</script>
 {% endblock %}
