--- a/templates/books/books_create.html
+++ b/templates/books/books_create.html
@@ -119,4 +119,7 @@
         </div>
     </div>
 </main>
+<script>
+    document.getElementById('tab-books').classList.add('active')
+</script>
 {% endblock %}
