--- a/templates/categories/categories_create.html
+++ b/templates/categories/categories_create.html
@@ -44,5 +44,7 @@
         </div>
     </div>
 </main>
-
+<script>
+    document.getElementById('tab-categories').classList.add('active')
+</script>
 {% endblock %}
