--- a/templates/books/books_update.html
+++ b/templates/books/books_update.html
@@ -125,5 +125,7 @@
         </div>
     </div>
 </main>
-
+<script>
+    document.getElementById('tab-books').classList.add('active')
+</script>
 {% endblock %}
