--- a/templates/categories/categories.html
+++ b/templates/categories/categories.html
@@ -57,4 +57,7 @@
         </div>
     </div>
 </main>
+<script>
+  document.getElementById('tab-categories').classList.add('active')
+</script>
 {% endblock %}
