--- a/templates/categories/categories_update.html
+++ b/templates/categories/categories_update.html
@@ -43,5 +43,7 @@
         </div>
     </div>
 </main>
-
+<script>
+    document.getElementById('tab-categories').classList.add('active')
+</script>
 {% endblock %}
