--- a/templates/menu.html
+++ b/templates/menu.html
@@ -13,35 +13,35 @@
     <!-- <li class="nav-heading">Pages</li> -->
 
     <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'categories' %}">
+        <a class="nav-link" id="tab-categories" href="{% url 'categories' %}">
             <i class="fa-solid fa-inbox"></i>
             <span>&nbsp;Categories</span>
         </a>
     </li><!-- End Profile Page Nav -->
 
     <li class="nav-item">
-        <a class="nav-link collapsed" href="{% url 'books' %}">
+        <a class="nav-link" id="tab-books" href="{% url 'books' %}">
             <i class="fa-solid fa-book"></i>
             <span>&nbsp;Books</span>
         </a>
     </li><!-- End F.A.Q Page Nav -->
 
     <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-contact.html">
+        <a class="nav-link" id="tab-report" href="pages-contact.html">
             <i class="fa-solid fa-file-invoice"></i>
             <span>&nbsp;Report</span>
         </a>
     </li><!-- End Contact Page Nav -->
 
     <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-register.html">
+        <a class="nav-link" id="tab-chart" href="pages-register.html">
             <i class="fa-regular fa-chart-bar"></i>
             <span>&nbsp;Chart</span>
         </a>
     </li><!-- End Register Page Nav -->
 
     <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-login.html">
+        <a class="nav-link" id="tab-users" href="pages-login.html">
             <i class="fa-solid fa-address-card"></i>
             <span>&nbsp;Users</span>
         </a>
