Delivery create done.

--- a/templates/books/books_create.html
+++ b/templates/books/books_create.html
@@ -102,7 +102,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="expense">Distribution Expense:</label>
-                        <input type="number" name="expense" id="expense" class="form-control mt-1" placeholder="Distribution Expense" onkeypress='return validateKeypress(/[ 0-9.]/g)' required>
+                        <input type="number" name="expense" step="any" id="expense" class="form-control mt-1" placeholder="Distribution Expense" onkeypress='return validateKeypress(/[ 0-9.]/g)' required>
                     </div>
                     {% endif %}
                     <!-- Alert Messages -->
