--- a/templates/books/books_update.html
+++ b/templates/books/books_update.html
@@ -106,7 +106,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="expense">Distribution Expense:</label>
-                                <input type="number" name="expense" id="expense" value='{{book.distribution_expense}}' class="form-control mt-1" placeholder="Distribution Expense" onkeypress='return validateKeypress(/[ 0-9.]/g)' required>
+                                <input type="number" step="any" name="expense" id="expense" value='{{book.distribution_expense}}' class="form-control mt-1" placeholder="Distribution Expense" onkeypress='return validateKeypress(/[ 0-9.]/g)' required>
                             </div>
 
                             <!-- Alert Messages -->
