--- a/templates/menu.html
+++ b/templates/menu.html
@@ -13,6 +13,13 @@
     <!-- <li class="nav-heading">Pages</li> -->
 
     <li class="nav-item">
+        <a class="nav-link" id="tab-delivery" href="{% url 'deliveries' %}">
+            <i class="fa-solid fa-truck-fast"></i>
+            <span>&nbsp;Deliveries Distribution</span>
+        </a>
+    </li><!-- End Distribution Page Nav -->
+
+    <li class="nav-item">
         <a class="nav-link" id="tab-categories" href="{% url 'categories' %}">
             <i class="fa-solid fa-inbox"></i>
             <span>&nbsp;Categories</span>
