Update delivery done

--- a/templates/books/books_create.html
+++ b/templates/books/books_create.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="subtitle">Subtitle:</label>
-                        <input type="search" name="subtitle" id="subtitle" class="form-control mt-1" placeholder="Subtitle" onkeypress='return validateKeypress(/[ a-zA-Z0-9ñÑáéíóúÁÉÍÓÚüÜ.!()+=&-]/g)' required>
+                        <input type="search" name="subtitle" id="subtitle" class="form-control mt-1" placeholder="Subtitle" onkeypress='return validateKeypress(/[ a-zA-Z0-9ñÑáéíóúÁÉÍÓÚüÜ.!()+=&-]/g)'>
                     </div>
                     <div class="mb-3">
                         <label for="author">Author:</label>
