--- a/templates/deliveries/deliveries.html
+++ b/templates/deliveries/deliveries.html
@@ -17,7 +17,7 @@
 
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Books to Deliver</h5>
+              <h5 class="card-title">BOOKS DELIVERED</h5>
                 <a href="{% url 'create_deliveries'%}" class="btn btn-primary">
                     <i class="fa fa-plus-square"></i> New Delivery
                 </a>
@@ -28,6 +28,7 @@
                       <th>Unit</th>
                       <th>Qty</th>
                       <th>Total</th>
+                      <th>Date</th>
                       <th>Options</th>
                   </thead>
                   <tbody>
@@ -35,10 +36,15 @@
                         <tr>
                             <td>{{delivery.book.title}}</td>
                             <td>{{delivery.book.author}}</td>
-                            <td>{{delivery.book.distribution_expense}}</td>
+                            <td>{{delivery.unit_price}}</td>
                             <td>{{delivery.qty}}</td>
                             <td>{{delivery.total}}</td>
-                            <td></td>
+                            <td>{{delivery.date|date:'M d, Y'}}</td>
+                            <td>
+                                <a href="{% url 'update_deliveries' delivery.id %}" class="text-info">
+                                    <i class="fa fa-pen-to-square"></i>
+                                </a>
+                            </td>
                         </tr>
                     {% endfor %}
                   </tbody>
