Remove Delivery added. Visual change in HTML Books and Categories template

--- a/templates/books/books.html
+++ b/templates/books/books.html
@@ -17,7 +17,7 @@
 
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Books List</h5>
+              <h5 class="card-title">BOOKS LIST</h5>
                 <a href="{% url 'create_books' %}" class="btn btn-primary">
                     <i class="fa fa-plus-square"></i> Add Book
                 </a>
