--- a/templates/categories/categories.html
+++ b/templates/categories/categories.html
@@ -17,7 +17,7 @@
 
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Categories List</h5>
+              <h5 class="card-title">CATEGORIES LIST</h5>
               <a href="{% url 'create_category'%}" class="btn btn-primary"><i class="fa fa-plus-square"></i> New Category</a>
               <table class="table table-hover table-bordered  table-responsive mt-2">
                   <thead>
