--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
 <script src="{% static 'vendor/chart.js/chart.umd.js' %}"></script>
 <script src="{% static 'vendor/echarts/echarts.min.j' %}s"></script>
 <script src="{% static 'vendor/quill/quill.min.js' %}"></script>
-<script src="{% static 'vendor/simple-datatables/simple-datatables.js' %}"></script>
+<!-- <script src="{% static 'vendor/simple-datatables/simple-datatables.js' %}"></script> -->
 <script src="{% static 'vendor/tinymce/tinymce.min.js' %}"></script>
 <script src="{% static 'vendor/php-email-form/validate.js' %}"></script>
 
