Categories graphic done(show expenses by condition today and month). Chart item removed from menu, the dashboard show the some  charts to know results

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -40,12 +40,12 @@
         </a>
     </li><!-- End Contact Page Nav -->
 
-    <li class="nav-item">
+    <!-- <li class="nav-item">
         <a class="nav-link" id="tab-chart" href="pages-register.html">
             <i class="fa-regular fa-chart-bar"></i>
             <span>&nbsp;Chart</span>
         </a>
-    </li><!-- End Register Page Nav -->
+    </li>End Register Page Nav -->
 
     <li class="nav-item">
         <a class="nav-link" id="tab-users" href="pages-login.html">
