--- a/templates/index.html
+++ b/templates/index.html
@@ -104,24 +104,46 @@
               <div class="card">
 
                 <div class="card-body">
-                  <h5 class="card-title">Reports <span>/Today</span></h5>
-
+                  <h5 class="card-title">Reports <span>/Month</span></h5>
+                  
+                 
                   <!-- Line Chart -->
                   <div id="reportsChart"></div>
-
+              
                   <script>
+                    var days = []
+                    var categories= new Set()
+                    var data={}
+                    {% for area in area_chart %}
+                      if(days.includes("{{area.date|date:'d'}}")){
+                        // console.log(true)
+                      }
+                      else{
+                        days.push("{{area.date|date:'d'}}")
+                        // console.log(false)
+                      }
+
+                      // days.add("{{area.date|date:'d'}}")
+                      categories.add("{{area.category_name}}")
+                      if(data["{{area.category_name.split|join:'_'}}"]){
+                        data["{{area.category_name.split|join:'_'}}"].push("{{area.total|floatformat:2}}")
+                      }
+                      else{
+                        data["{{area.category_name.split|join:'_'}}"]=[]
+                      }
+                    {% endfor %}
+
+                    // console.log(data["Business_Analytics"])
+                    var info=[]
+                    categories.forEach(item=>{
+                        index=item.replace(' ', '_')
+                        info.push({name: item, data:data[index]})
+                    })
+                    // console.log(days)
                     document.addEventListener("DOMContentLoaded", () => {
                       new ApexCharts(document.querySelector("#reportsChart"), {
-                        series: [{
-                          name: 'Sales',
-                          data: [31, 40, 28, 51, 42, 82, 56],
-                        }, {
-                          name: 'Revenue',
-                          data: [11, 32, 45, 32, 34, 52, 41]
-                        }, {
-                          name: 'Customers',
-                          data: [15, 11, 32, 18, 9, 24, 11]
-                        }],
+                        // info contain all data
+                        series: info,
                         chart: {
                           height: 350,
                           type: 'area',
@@ -150,12 +172,12 @@
                           width: 2
                         },
                         xaxis: {
-                          type: 'datetime',
-                          categories: ["2018-09-19T00:00:00.000Z", "2018-09-19T01:30:00.000Z", "2018-09-19T02:30:00.000Z", "2018-09-19T03:30:00.000Z", "2018-09-19T04:30:00.000Z", "2018-09-19T05:30:00.000Z", "2018-09-19T06:30:00.000Z"]
+                          type: 'date',
+                          categories: days
                         },
                         tooltip: {
                           x: {
-                            format: 'dd/MM/yy HH:mm'
+                            format: 'd/m/Y'
                           },
                         }
                       }).render();
