Reports template done.

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -34,7 +34,7 @@
     </li><!-- End F.A.Q Page Nav -->
 
     <li class="nav-item">
-        <a class="nav-link" id="tab-report" href="pages-contact.html">
+        <a class="nav-link" id="tab-reports" href="{% url 'reports' %}">
             <i class="fa-solid fa-file-invoice"></i>
             <span>&nbsp;Report</span>
         </a>
@@ -47,12 +47,12 @@
         </a>
     </li>End Register Page Nav -->
 
-    <li class="nav-item">
+    <!-- <li class="nav-item">
         <a class="nav-link" id="tab-users" href="pages-login.html">
             <i class="fa-solid fa-address-card"></i>
             <span>&nbsp;Users</span>
         </a>
-    </li><!-- End Login Page Nav -->
+    </li>End Login Page Nav -->
 
     </ul>
 </aside><!-- End Sidebar-->
