--- a/templates/header.html
+++ b/templates/header.html
@@ -14,12 +14,13 @@
       <ul class="d-flex align-items-center">
         <li class="nav-item dropdown pe-3">
 
-            <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
+            <a class="nav-link nav-profile d-flex align-items-center pe-0" href="javascript:void(0)" data-bs-toggle="dropdown">
                 <img src="{% static 'img/profile-img.jpg' %}" alt="Profile" class="rounded-circle">
-                <span class="d-none d-md-block dropdown-toggle ps-2">{{user}}</span>
+                <span class="d-none d-md-block ps-2">{{user}}</span>
+                <!-- <span class="d-none d-md-block dropdown-toggle ps-2">{{user}}</span> -->
             </a><!-- End Profile Iamge Icon -->
 
-            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
+            <!-- <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                 <li class="dropdown-header">
                 <h6>Kevin Anderson</h6>
                 <span>Web Designer</span>
@@ -65,7 +66,7 @@
                 </a>
                 </li>
 
-            </ul><!-- End Profile Dropdown Items -->
+            </ul>End Profile Dropdown Items -->
         </li><!-- End Profile Nav -->
 
         </ul>
