--- a/templates/signup.html
+++ b/templates/signup.html
@@ -24,12 +24,12 @@
                   <h5 class="card-title text-center pb-0 fs-4">Create an Account</h5>
                   <p class="text-center small">Enter your username & password to sign up</p>
                 </div>
-
+                <form method="post">
+                  {% csrf_token %}
                   <div class="col-12">
                     <label for="yourUsername" class="form-label">Username</label>
                     <div class="input-group has-validation">
-                      <span class="input-group-text" id="inputGroupPrepend">@</span>
-                      <input type="text" name="username" class="form-control" id="yourUsername" required>
+                      <input type="text" name="username" value="{{form.username}}" class="form-control" id="yourUsername" required>
                       <div class="invalid-feedback">Please choose a username.</div>
                     </div>
                   </div>
@@ -44,12 +44,18 @@
                     <input type="password" name="password2" class="form-control" id="yourPassword2" required>
                     <div class="invalid-feedback">Please enter your password!</div>
                   </div>
-                  
-                  <div class="col-12 mt-3">
+
+                  {% if error %}
+                    <div class="alert alert-danger alert-dismissible fade show mt-2" role="alert">
+                        <strong>Error!</strong> {{error}}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                  {% endif %}
+                  <div class="col-12 mt-2">
                     <button class="btn btn-primary w-100" type="submit">Create Account</button>
                   </div>
                   <div class="col-12">
-                    <p class="small mb-0">Already have an account? <a href="pages-login.html">Log in</a></p>
+                    <p class="small mb-0">Already have an account? <a href="{% url 'signin' %}">Log in</a></p>
                   </div>
                 </form>
 
