--- a/templates/reports/reports.html
+++ b/templates/reports/reports.html
@@ -28,7 +28,7 @@
                     <th>Date</th>
                   </thead>
                   <tbody>
-                    {% for delivery in deliveries %}
+                    {% for delivery in entity %}
                         <tr>
                             <td>{{delivery.book.title}}</td>
                             <td>{{delivery.book.author}}</td>
@@ -40,6 +40,7 @@
                     {% endfor %}
                   </tbody>
               </table>
+              {% include 'paginator.html' %}
             </div>
           </div>
         </div>
