--- a/templates/index.html
+++ b/templates/index.html
@@ -282,7 +282,7 @@
           <!-- Website Traffic -->
           <div class="card">
             <div class="card-body pb-0">
-              <h5 class="card-title">Categories <span>| Today</span></h5>
+              <h5 class="card-title">Expenses By Category <span>| Today</span></h5>
               
               <div id="trafficChart" style="min-height: 400px;" class="echart"></div>
 
@@ -292,11 +292,11 @@
                     tooltip: {
                       trigger: 'item'
                     },
-                    title: {
-                      text: 'Expenses',
-                      subtext: 'Hover over the graph to see the expenses.',
-                      x: 'center'
-                    },
+                    // title: {
+                    //   text: 'Expenses',
+                    //   subtext: 'Hover over the graph to see the expenses.',
+                    //   x: 'center'
+                    // },
                     legend: {
                       top: '5%',
                       left: 'center',
@@ -340,7 +340,7 @@
           <!-- Website Traffic -->
           <div class="card">
             <div class="card-body pb-0">
-              <h5 class="card-title">Categories <span>| Month</span></h5>
+              <h5 class="card-title">Expenses By Category <span>| Month</span></h5>
 
               <div id="trafficChart2" style="min-height: 400px;" class="echart"></div>
 
@@ -350,11 +350,11 @@
                     aria: {
                       show: true
                     },
-                    title: {
-                      text: 'Expenses',
-                      subtext: 'Hover over the graph to see the expenses.',
-                      x: 'center'
-                    },
+                    // title: {
+                    //   text: 'Expenses',
+                    //   subtext: 'Hover over the graph to see the expenses.',
+                    //   x: 'center'
+                    // },
                     tooltip: {
                       trigger: 'item',
                       show:true
