--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,15 @@
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
+    <!-- Vendor CSS Files -->
+    <link href="{% static '/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static '/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+    <link href="{% static '/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
+    <link href="{% static '/vendor/quill/quill.snow.css' %}" rel="stylesheet">
+    <link href="{% static '/vendor/quill/quill.bubble.css' %}" rel="stylesheet">
+    <link href="{% static '/vendor/remixicon/remixicon.css' %}" rel="stylesheet">
+    <link href="{% static '/vendor/simple-datatables/style.css' %}" rel="stylesheet">
+
     <!-- Template Main CSS File -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
 </head>
@@ -31,14 +40,15 @@
 <script src="{% static 'vendor/chart.js/chart.umd.js' %}"></script>
 <script src="{% static 'vendor/echarts/echarts.min.j' %}s"></script>
 <script src="{% static 'vendor/quill/quill.min.js' %}"></script>
-<!-- <script src="{% static 'vendor/simple-datatables/simple-datatables.js' %}"></script> -->
+<script src="{% static 'vendor/simple-datatables/simple-datatables.js' %}"></script>
 <script src="{% static 'vendor/tinymce/tinymce.min.js' %}"></script>
 <script src="{% static 'vendor/php-email-form/validate.js' %}"></script>
 
 <!-- Template Main JS File -->
-<script src="{% static 'js/main.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
+<script src="{% static 'js/main.js' %}"></script>
 
 <script>
     // declaring regExpresion to validate letters, numbers and some special characters
