--- a/templates/deliveries/deliveries.html
+++ b/templates/deliveries/deliveries.html
@@ -23,17 +23,16 @@
                     <i class="fa fa-plus-square"></i> New Delivery
                 </a>
                 </div>
-                <form method="post">
-                  {% csrf_token %}
+                <form method="get">
+                  
                   <div class="row">
                   <div class="col-10">
-                    <input type="search" name="title" class="form-control" id="title" placeholder="Title" onkeypress='return validateKeypress(/[ a-zA-Z0-9ñÑáéíóúÁÉÍÓÚüÜ.!()+=&-]/g)'>
+                    <input type="search" name="title" value="{{filters.0.value}}" class="form-control" id="title" placeholder="Title" onkeypress='return validateKeypress(/[ a-zA-Z0-9ñÑáéíóúÁÉÍÓÚüÜ.!()+=&-]/g)'>
                   </div>
                   <div class="col-2">
-                    <button class="btn btn-primary">Search</button>
+                    <button class="btn btn-primary" style="width:90%">Search</button>
                   </div>
                 </div>
-                  
                 </form>
               <table class="table table-hover table-bordered  table-responsive mt-2">
                   <thead>
@@ -68,7 +67,7 @@
                     {% endfor %}
                   </tbody>
               </table>
-              {% include 'paginator.html' %}
+              {% include 'paginator.html' with filters=filters %}
             </div>
           </div>
         </div>
